@@ -1,3 +1,6 @@
+5/7/12
+  Remove transient windows that flash up on one desktop then show on another from the desktop
+
 2/7/12
   Just map the desktop switcher and bar windows
   Click on the bar to change to previous desktop
